# Learning-to-navigate-without-a-map

./: .gitignore  3d-drl.py  Makefile  README.md  development-dqn.ipynb  dqn-3d.py  dqn-cnn.py  dqn.py  dqn2.py  requirements.txt
backup-scripts/: 10percent.py  dqn.py
dstar-lite/: CMakeLists.txt  Dstar.cpp  DstarDraw.cpp  Makefile  README.md  dstar.cpp  dstar_draw.cpp
dstar-lite/include/dstar_lite/: dstar.h
dstar-lite/resources/: gridworld_8.csv
dstar-lite/scripts/: python_pipe.py
dstar-lite/src/: dstar.cpp  dstar_draw.cpp  dstar_from_grid.cpp  dstar_from_input.cpp
rlpong/: __init__.py
rlpong/tests/: ddpg_pong.py  keras_pong.py
rlvision/: __init__.py  ddpg.py  dstar.py  grid.py  pydstar.py  utils.py  vin.py
rlvision/exps/: ddpg_16_exp.py  dqn_16_exp.py  dqn_28_exp.py  dqn_8_exp.py  dstar_16_exp.py  dstar_28_exp.py  dstar_28_new_exp.py  dstar_40_exp.py  dstar_8_exp.py  dstar_8_new_exp.py  pg_16_exp.py  vin_exp.py  vin_exp_16.py  vin_exp_28.py  vin_exp_8.py  vin_exp_po_16.py  vin_exp_po_28.py  vin_exp_po_8.py  vin_pg_16_exp.py
rlvision/tests/: data_load_test.py  data_test.py  dstar_test.py  grid_class_test.py  grid_test.py  hdf5_data_test.py  load_selected_grid.py  load_train_ds.py  new_data_test.py  plot_loss_fig.py  restructure_dataset.py  sample_train_ds.py  select_dstar_grid_export.py  select_po_grid.py  select_po_grid_export.py  vin_po_benchmark_export_16.py  vin_po_benchmark_export_28.py  vin_po_benchmark_export_8.py  vin_po_export_value_reward_16.py  vin_po_export_value_reward_28.py  vin_po_predict.py  vin_po_result.py  vin_predict.py  vis_vin_data.py
scripts/: high_level_linear_regression.py  linear_regression.py
vin/: __init__.py  model.py  utils.py
vin/tests/: train_tied.py
world_generator/scripts/: world_generator.py
world_generator/world_models/: default_models.world  default_world.world  python_generated.world
world_generator/world_models/grid16_paths/: grid_16_14_bad.world  grid_16_14_bad_trajectory.txt  grid_16_14_dstar.world  grid_16_14_dstar_trajectory.txt  grid_16_14_good.world  grid_16_14_good_trajectory.txt  grid_16_15_bad.world  grid_16_15_bad_trajectory.txt  grid_16_15_good.world  grid_16_15_good_trajectory.txt  grid_16_182_bad.world  grid_16_182_bad_trajectory.txt  grid_16_182_good.world  grid_16_182_good_trajectory.txt  grid_16_287_bad.world  grid_16_287_bad_trajectory.txt  grid_16_287_good.world  grid_16_287_good_trajectory.txt  grid_16_78_bad.world  grid_16_78_bad_trajectory.txt  grid_16_78_good.world  grid_16_84_bad.world  grid_16_84_bad_trajectory.txt  grid_16_84_dstar_trajectory.txt  grid_16_84_good.world  grid_16_84_good_trajectory.txt  grid_16_85_bad.world  grid_16_85_bad_trajectory.txt  grid_16_85_good.world  grid_16_85_good_trajectory.txt  grid_16_99_bad.world  grid_16_99_bad_trajectory.txt  grid_16_99_good.world  grid_16_99_good_trajectory.txt
world_generator/world_models/grid28_paths/: grid_28_105_bad.world  grid_28_105_bad_trajectory.txt  grid_28_105_good.world  grid_28_105_good_trajectory.txt  grid_28_140_bad.world  grid_28_140_bad_trajectory.txt  grid_28_140_good.world  (+26 more)
world_models/: default_models.world  default_world.world
(+28 files in other folders)
